[gd_scene load_steps=8 format=3 uid="uid://vf3hehc00p3o"]

[ext_resource type="Script" uid="uid://cbk3keikb7k51" path="res://Items/Scripts/item.gd" id="1_b6pr5"]

[sub_resource type="Animation" id="Animation_mhc50"]
resource_name = "RESET"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RigidBody3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1.07177),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RigidBody3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.5708, 0)]
}

[sub_resource type="Animation" id="Animation_tsj1q"]
resource_name = "RESET"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RigidBody3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.633333, 0.833333, 1.1, 1.23333, 1.5, 2),
"transitions": PackedFloat32Array(2.73208, 0.554785, 1.41421, 0.757859, 1.56917, 0.31864, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.49, -0.805), Vector3(0, -0.4, -1.02), Vector3(0, -0.49, -1.095), Vector3(0, -0.415, -1.155), Vector3(0, -0.49, -1.215), Vector3(0, -0.49, -1.325)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RigidBody3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.633333, 1.13333, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 0.574349, 1),
"update": 0,
"values": [Vector3(0, -3.14159, 0), Vector3(0, -1.39626, 0), Vector3(0, 1.0472, 0), Vector3(0, 1.5708, 0), Vector3(0, 1.84132, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tsj1q"]
_data = {
&"RESET": SubResource("Animation_mhc50"),
&"spawning": SubResource("Animation_tsj1q")
}

[sub_resource type="CapsuleMesh" id="CapsuleMesh_b6pr5"]
radius = 0.05
height = 0.1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mhc50"]
radius = 0.05
height = 0.1

[sub_resource type="SphereShape3D" id="SphereShape3D_mhc50"]
radius = 0.055

[node name="Item" type="Node3D"]
script = ExtResource("1_b6pr5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tsj1q")
}

[node name="RigidBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(-3.61999e-06, 0, -1, 0, 1, 0, 1, 0, -3.61999e-06, 0, 0, 0)
freeze = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D"]
mesh = SubResource("CapsuleMesh_b6pr5")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
shape = SubResource("CapsuleShape3D_mhc50")

[node name="Area3D" type="Area3D" parent="RigidBody3D"]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D/Area3D"]
shape = SubResource("SphereShape3D_mhc50")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="mouse_entered" from="RigidBody3D" to="." method="_on_rigid_body_3d_mouse_entered"]
[connection signal="mouse_exited" from="RigidBody3D" to="." method="_on_rigid_body_3d_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
